[metadata]
name = flood-napari
version = 0.0.1
author = Marcelo Leomil Zoccoler
author_email = marcelo.zoccoler@tu-dresden.de
url = https://github.com/zoccoler/flood-napari
license = BSD-3-Clause
description = A simple plugin to flood 8-bit 2D images by means of a big blue label
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/zoccoler/flood-napari/issues
    Documentation = https://github.com/zoccoler/flood-napari#README.md
    Source Code = https://github.com/zoccoler/flood-napari
    User Support = https://github.com/zoccoler/flood-napari/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    flood-napari = flood_napari
